syntax = "proto3";
package seasonpb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "shared/pb/seasonpb;seasonpb";

service SeasonService {
  rpc CreateSeason(CreateSeasonRequest) returns (CreateSeasonResponse);
  rpc GetSeasonByID(GetSeasonByIDRequest) returns (Season);
  rpc ListSeasonsBySeriesID(ListSeasonsBySeriesIDRequest) returns (SeasonList);
  rpc UpdateSeasonByID(UpdateSeasonByIDRequest) returns (google.protobuf.Empty);
  rpc ReorderSeasonsBySeriesID(ReorderSeasonsBySeriesIDRequest) returns (google.protobuf.Empty);
  rpc DeleteSeasonByID(DeleteSeasonByIDRequest) returns (google.protobuf.Empty);
  rpc DeleteAllSeasonsBySeriesID(DeleteAllSeasonsBySeriesIDRequest) returns (google.protobuf.Empty);
}
  
message CreateSeasonRequest {
  string series_id = 1;
  string title = 2;
  string description = 3;
}

message CreateSeasonResponse {
  string season_id = 1;
}

message GetSeasonByIDRequest {
  string season_id = 1;
}

message Season {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string title = 4;
  string description = 5;
  string series_id = 6;
  int32 order = 7;
}

message ListSeasonsBySeriesIDRequest {
  string series_id = 1;
}

message SeasonList {
  repeated Season list = 1;
}

message UpdateSeasonByIDRequest {
  string season_id = 1;
  string title = 2;
  string description = 3;
}

message ReorderSeasonsBySeriesIDRequest {
  string series_id = 1;
  repeated string season_ids = 2;
}

message DeleteSeasonByIDRequest {
  string season_id = 1;
}

message DeleteAllSeasonsBySeriesIDRequest {
  string series_id = 1;
}

